# arithmetic-translator

./: CMakeLists.txt
lib/: Stack.h  Translator.h
src/: Translator.cpp  main.cpp
test/: tests.cpp
